# Auto_ext

./: .gitattributes  .gitignore  README.md  pyproject.toml  run.sh
auto_ext/: __init__.py  __main__.py  cli.py  cli_reporter.py  migrate.py
auto_ext/core/: __init__.py  checks.py  clone_template.py  config.py  diff_template.py  env.py  errors.py  importer.py  init_project.py  io_utils.py  manifest.py  preset.py  progress.py  runner.py  template.py  workdir.py
auto_ext/tools/: __init__.py  base.py  calibre.py  jivaro.py  quantus.py  si.py  strmout.py
auto_ext/ui/: __init__.py  app.py  config_controller.py  main_window.py  models.py  os_open.py  qt_reporter.py  templates_view.py  worker.py
config/: project.yaml  tasks.yaml
docs/: CONFIG_GLOSSARY.md  GUI_GUIDE.md  OFFICE_QUICKSTART.md  OFFICE_VALIDATION.md  PHASE_3_5_VALIDATION.md  README.md
docs/archive/: Old_project_prompt.txt
examples/demo/: project.yaml  tasks.yaml
scripts/: download_wheels.py  install_offline.sh  pack.bat  pack_for_office.ps1  unpack_in_office.sh
templates/calibre/: calibre_lvs.qci.j2  calibre_lvs.qci.j2.manifest.yaml  wiodio_noConnectByNetName.qci.j2  wiodio_noConnectByNetName.qci.j2.manifest.yaml
templates/jivaro/: default.xml.j2  default.xml.j2.manifest.yaml
templates/quantus/: dspf.cmd.j2  dspf.cmd.j2.manifest.yaml  ext.cmd.j2  ext.cmd.j2.manifest.yaml
templates/si/: default.env.j2  default.env.j2.manifest.yaml
tests/: conftest.py  test_cli_init_project.py  test_cli_run.py  test_integration_e2e.py  test_path_safety.py  test_runner.py  test_runner_parallel.py  test_sanity.py
(+81 files in other folders)
